# home-assistant-solaredge-history-downloader

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs.yml  validate.yml
custom_components/solaredge_history_downloader/: __init__.py  const.py  history.py  icons.json  manifest.json  meter.py  recorder.py  service.py  services.yaml  solaredge_api.py  strings.json
custom_components/solaredge_history_downloader/translations/: en.json  it.json
tests/: test_history.py  test_recorder.py  test_solaredge_api.py
