[project]
name = "home-assistant-solaredge-history-downloader"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
	"pytest-asyncio>=1.3.0",
	"pytest>=9.0.0",
	"ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]